--- a/asgn4/Makefile
+++ b/asgn4/Makefile
@@ -5,22 +5,22 @@ CFLAGS = -Wall -Werror -Wextra -Wpedantic
 all: hamming
 	
 hamming: hamming.o generator.o decoder.o bm.o error.o
-	   $(CC) $(CFLAGS) hamming.o generator.o decoder.o bm.o error.o -o hamming
+	   $(CC) $(CCFLAGS) hamming.o generator.o decoder.o bm.o error.o -o hamming
 
 hamming.o:
-	   $(CC) $(CFLAGS) -c hamming.c -o hamming.o
+	   $(CC) $(CCFLAGS) -c hamming.c -o hamming.o
 
 generator.o:
-	   $(CC) $(CFLAGS) -c generator.c -o generator.o
+	   $(CC) $(CCFLAGS) -c generator.c -o generator.o
 
 decoder.o:
-     	   $(CC) $(CFLAGS) -c decoder.c -o decoder.o
+     	   $(CC) $(CCFLAGS) -c decoder.c -o decoder.o
 
 bm.o:
-	   $(CC) $(CFLAGS) -c bm.c -o bm.o
+	   $(CC) $(CCFLAGS) -c bm.c -o bm.o
 
 error.o:
-	   $(CC) $(CFLAGS) -c error.c -o error.o
+	   $(CC) $(CCFLAGS) -c error.c -o error.o
 
 clean:
 	   rm -f hamming hamming.o generator.o decoder.o bm.o error.o
